Fix running konsole on Wayland

%i expands to "--icon someicon", but Qt recognizes this option only on
X11/xcb.
So konsole failed to start on Wayland.

To fix this problem, pass "-qwindowicon" instead, which is supported on
all platforms.

See https://community.kde.org/Guidelines_and_HOWTOs/Wayland_Porting_Notes#Exec_key_of_.desktop_files for details.

BUG: 408497
FIXED-IN: 5.68.0
Differential Revision: https://phabricator.kde.org/D27654